--- a/action.yml
+++ b/action.yml
@@ -27,3 +27,4 @@ runs:
     - run: architect destroy --auto_approve -a ${{ inputs.ACCOUNT }} -e ${{ inputs.ENVIRONMENT }} -c ${{ inputs.COMPONENT_NAME }}
       shell: bash
     - run: architect env:destroy --auto_approve ${{ inputs.ENVIRONMENT }} -a ${{ inputs.ACCOUNT }}
+      shell: bash
