--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: Destroy Preview
+name: Architect Destroy Preview
 description: Easily destroy a deployed component and environment on the Architect Cloud
 author: architect-team
 branding:
