username to email

--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ branding:
   color: orange
 
 inputs:
-  username:
+  email:
     required: true
   password:
     required: true
@@ -20,9 +20,9 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - run: npm install -g @architect-io/cli@0.6.3
+    - run: npm install -g @architect-io/cli@0.7.2
       shell: bash
-    - run: architect login -u ${{ inputs.username }} -p ${{ inputs.password }}
+    - run: architect login -e ${{ inputs.email }} -p ${{ inputs.password }}
       shell: bash
     - run: architect destroy --auto_approve -a ${{ inputs.account }} -e ${{ inputs.environment }} -c ${{ inputs.component_name }}:${{ inputs.environment }}
       shell: bash
